--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -24,7 +24,7 @@
     },
     "profile": {
       "hello": "Hi, I'm ",
-      "introduction_content": "A Full-Stack and DevOps developer with experience in a variety of technologies, from C# and TypeScript to Python and Java. Specializing in building scalable and secure web applications, I enjoy integrating front-end and back-end with clean architecture while managing CI/CD pipelines and cloud infrastructure. Always seeking new challenges and learning opportunities, I am excited to explore areas such as Information Security, IoT, ML, and Mobile development.",
+      "introduction_content": "A Full-Stack and DevOps developer with experience in a variety of technologies, like C#, TypeScript, Python, C++, PHP e Java. Specializing in building scalable and secure web applications, I enjoy integrating front-end and back-end with clean architecture while managing CI/CD pipelines and cloud infrastructure. Always seeking new challenges and learning opportunities, I am excited to explore areas such as Information Security, IoT, ML, and Mobile development.",
       "introduction_end": "Let's create something amazing together!"
     }
   }
