--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -13,6 +13,9 @@
     },
     "developer": "Desenvolvedor Web Full-Stack",
     "download_cv": "Baixar CV",
+    "enthusiastic": {
+      "dart_gif_client": "Aplicativo em Flutter Dart para consulta de gifs utilizando a API publica do GIPHY."
+    },
     "footer": {
       "get_in_touch": "Entre em contato por e-mail diretamente por"
     },
@@ -26,6 +29,9 @@
       "hello": "Olá, eu sou",
       "introduction_content": "Desenvolvedor Full-Stack e DevOps com experiência em uma variedade de tecnologias como, C#, TypeScript, Python, PHP, C++ e Java. Especializado em criar aplicações web escaláveis e seguras, eu gosto de unir front-end e back-end com uma arquitetura limpa, enquanto gerencio pipelines CI/CD e infraestrutura em nuvem. Sempre em busca de novos desafios e aprendizados, estou animado para explorar áreas como Segurança da Informação, IoT, ML e Mobile.",
       "introduction_end": "Vamos fazer algo incrível juntos!"
+    },
+    "projects": {
+      "site_portfolio": "Um portfólio moderno, projetado no Figma e desenvolvido em React, combinando design responsivo com animações. Adaptável a todos os dispositivos, o site oferece uma experiência de usuário envolvente e funcional, demonstrando a habilidade de integrar design e desenvolvimento."
     }
   }
 }
